--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>M S Dhoni</title>
+    <link rel="icon" href="Images/msd.jpg" type="image/icon type">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
